[package]
name = "etl-destinations"
version = "0.1.0"
edition.workspace = true
license.workspace = true
autotests = false

rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
doctest = false

[features]
ducklake = [
    "dep:duckdb",
    "dep:etl-maintenance",
    "etl-maintenance/ducklake",
    "dep:humantime",
    "dep:metrics",
    "dep:parking_lot",
    "dep:pg_escape",
    "dep:r2d2",
    "dep:rand",
    "dep:regex",
    "dep:serde",
    "dep:serde_json",
    "dep:sqlx",
    "dep:tokio-postgres",
    "dep:tracing",
    "dep:tokio",
    "dep:url",
]
bigquery = [
    "dep:gcp-bigquery-client",
    "dep:serde_json",
    "dep:prost",
    "dep:rand",
    "dep:tonic",
    "dep:tracing",
    "dep:tokio",
    "dep:metrics",
]
iceberg = [
    "dep:iceberg",
    "dep:iceberg-catalog-rest",
    "dep:arrow",
    "dep:tracing",
    "dep:parquet",
    "dep:uuid",
    "dep:tokio",
    "dep:reqwest",
    "dep:async-trait",
    "dep:serde",
    "dep:serde_json",
]
clickhouse = [
    "dep:clickhouse",
    "dep:metrics",
    "dep:tracing",
    "dep:tokio",
    "dep:serde",
    "dep:futures",
    "dep:parking_lot",
    "dep:url",
    "dep:uuid",
]
postgres = [
    "dep:bytes",
    "dep:pg_escape",
    "dep:tokio",
    "dep:tokio-postgres",
    "dep:tracing",
]
egress = ["etl/egress"]
# We assume that `test-utils` is always used in conjunction with `bigquery` or `iceberg` thus we only
# put here the extra dependencies needed.
test-utils = ["dep:uuid"]

[dependencies]

arrow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono = { workspace = true, features = ["serde"] }
clickhouse = { workspace = true, optional = true, features = ["inserter", "lz4", "rustls-tls"] }
duckdb = { workspace = true, optional = true, features = ["bundled", "json", "parquet", "r2d2"] }
etl = { workspace = true }
etl-maintenance = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
gcp-bigquery-client = { workspace = true, optional = true, features = ["rust-tls", "aws-lc-rs"] }
humantime = { workspace = true, optional = true }
iceberg = { workspace = true, optional = true }
iceberg-catalog-rest = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
parquet = { workspace = true, optional = true, features = ["async", "arrow"] }
pg_escape = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
r2d2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true, features = ["thread_rng"] }
regex = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true, features = ["arbitrary_precision", "std"] }
sqlx = { workspace = true, optional = true, features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio = { workspace = true, optional = true, features = ["rt", "sync", "time"] }
tokio-postgres = { workspace = true, optional = true, features = ["runtime", "array-impls", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tonic = { workspace = true, optional = true }
tracing = { workspace = true, optional = true, default-features = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["v4"] }

[dev-dependencies]
base64 = { workspace = true }

chrono = { workspace = true }
duckdb = { workspace = true, features = ["bundled", "json", "parquet"] }
etl = { workspace = true, features = ["test-utils"] }
etl-postgres = { workspace = true, features = ["test-utils", "tokio"] }
etl-telemetry = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest"] }
rand = { workspace = true, features = ["thread_rng"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }

[[test]]
name = "main"
path = "tests/main.rs"

[lints]
workspace = true
