[package]
name = "etl-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true

rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "bigquery"
path = "src/bin/bigquery.rs"
required-features = ["bigquery"]

[[bin]]
name = "clickhouse"
path = "src/bin/clickhouse.rs"
required-features = ["clickhouse"]

[[bin]]
name = "ducklake"
path = "src/bin/ducklake.rs"
required-features = ["ducklake"]

[features]
default = []
bigquery = ["etl-destinations/bigquery"]
clickhouse = ["etl-destinations/clickhouse"]
ducklake = ["etl-destinations/ducklake"]

[dependencies]

clap = { workspace = true, default-features = true, features = ["std", "derive"] }
etl = { workspace = true }
etl-destinations = { workspace = true }
etl-telemetry = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
tokio = { workspace = true, features = ["macros", "signal"] }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true, features = ["env-filter"] }
url = { workspace = true }

[lints]
workspace = true
