[package]
name = "etl-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true

rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "bigquery"
path = "src/bin/bigquery.rs"
required-features = ["bigquery"]
test = false

[[bin]]
name = "clickhouse"
path = "src/bin/clickhouse.rs"
required-features = ["clickhouse"]
test = false

[[bin]]
name = "ducklake"
path = "src/bin/ducklake.rs"
required-features = ["ducklake"]
test = false

[features]
default = []
bigquery = ["etl-destinations/bigquery"]
clickhouse = ["etl-destinations/clickhouse"]
ducklake = ["etl-destinations/ducklake"]
snowflake = [
  "etl-destinations/snowflake",
  "dep:crossterm",
  "dep:ratatui",
  "dep:rand",
  "dep:reqwest",
  "dep:secrecy",
  "dep:tokio-postgres",
]

[[bin]]
name = "snowflake"
path = "src/bin/snowflake/main.rs"
required-features = ["snowflake"]
test = false

[[bin]]
name = "snowflake-loadgen"
path = "src/bin/snowflake_loadgen.rs"
required-features = ["snowflake"]
test = false

[dependencies]

clap = { workspace = true, default-features = true, features = [
  "std",
  "derive",
  "env",
] }
etl = { workspace = true }
crossterm = { version = "0.29", optional = true }
etl-destinations = { workspace = true }
etl-telemetry = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest"] }
rand = { workspace = true, optional = true, features = ["std", "std_rng"] }
ratatui = { version = "0.30", optional = true, default-features = false, features = [
  "crossterm",
] }
reqwest = { workspace = true, optional = true, features = ["json"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
secrecy = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "signal", "time"] }
tokio-postgres = { workspace = true, optional = true }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, default-features = true, features = [
  "env-filter",
] }
url = { workspace = true }

[lints]
workspace = true
