[package]
name = "etl-replicator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "etl-ducklake-maintenance"
path = "src/bin/etl-ducklake-maintenance.rs"
required-features = ["ducklake"]

[features]
default = ["bigquery", "clickhouse", "ducklake", "iceberg", "snowflake"]
any-destination = []
bigquery = ["any-destination", "etl-destinations/bigquery"]
clickhouse = ["any-destination", "etl-destinations/clickhouse"]
ducklake = ["any-destination", "etl-destinations/ducklake", "etl-maintenance/ducklake"]
iceberg = ["any-destination", "etl-destinations/iceberg"]
snowflake = ["any-destination", "etl-destinations/snowflake"]
egress = ["etl/egress", "etl-destinations/egress"]

[dependencies]

configcat = { workspace = true }
etl = { workspace = true }
etl-config = { workspace = true, features = ["supabase"] }
etl-destinations = { workspace = true }
etl-maintenance = { workspace = true }
etl-telemetry = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest"] }
metrics = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
rustls = { workspace = true, features = ["aws-lc-rs", "logging"] }
secrecy = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate"] }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl = { workspace = true }
tikv-jemallocator = { workspace = true }

[lints]
workspace = true
