[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context", "env"] }
etl-api = { path = "../etl-api", default-features = false }
etl-config = { workspace = true }
k8s-openapi = { workspace = true, features = ["latest"] }
kube = { workspace = true, features = ["client", "derive", "rustls-tls", "ring"] }
pg_escape = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
schemars = "0.8"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "json"] }
tokio = { workspace = true, features = ["full"] }
toml = "1.1"
xshell = "0.2"

[lints]
workspace = true
